--- a/twisty/res/layout/restore_file_prompt.xml
+++ b/twisty/res/layout/restore_file_prompt.xml
@@ -1,9 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+    	android:layout_width="fill_parent"
+    	android:layout_height="wrap_content">  
+
+  <LinearLayout 
     android:orientation="vertical"
     android:layout_width="fill_parent" 
     android:layout_height="fill_parent">
-    
+    	
     <RadioGroup
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
@@ -31,5 +36,6 @@
         android:id="@+id/restorecancelbutton" />
       </TableRow>
     </TableLayout>
-    
- </LinearLayout>
+   
+   </LinearLayout>
+</ScrollView> 
