--- a/twisty/res/layout/save_file_prompt.xml
+++ b/twisty/res/layout/save_file_prompt.xml
@@ -6,7 +6,8 @@
     
     <TextView android:id="@+id/label" 
               android:layout_width="fill_parent" 
-              android:layout_height="wrap_content" 
+              android:layout_height="wrap_content"
+		      android:singleLine="true"
               android:text="Enter filename to save to:"/>
     
     <EditText android:id="@+id/savefile_entry" 
