No longer use an image buffer for display; instead use Android's native text handling. We lose the --MORE-- prompt, but we gain scrollback.

--- a/twisty/res/values/colors.xml
+++ b/twisty/res/values/colors.xml
@@ -1,9 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-  <drawable name="body_bg">#33ffff00</drawable>
+  <drawable name="body_bg">#ffffffff</drawable>
+  <drawable name="body_fg">#ff000000</drawable>
   <drawable name="error_bg">#ffff6600</drawable>
   <drawable name="error_fg">#ff000000</drawable>
-  <drawable name="status_bg">#770000ff</drawable>
+  <drawable name="more_bg">#00000033</drawable>
+  <drawable name="more_fg">#ffffffff</drawable>
+  <drawable name="status_bg">#ff000000</drawable>
   <drawable name="status_fg">#ffffffff</drawable>
 
   <drawable name="black">#ff000000</drawable>
