--- a/twisty/res/values/string.xml
+++ b/twisty/res/values/string.xml
@@ -1,4 +1,5 @@
 <resources>
   <string name="app_name">Twisty</string>  
   <string name="open_game_file">Open game file: (*.z3;*.z5;*.z8)</string>
+  <string name="more_prompt">-=MORE=-</string>  
 </resources>
