--- a/twisty/res/layout/twisty.xml
+++ b/twisty/res/layout/twisty.xml
@@ -9,40 +9,33 @@
     <TextView android:id="@+id/statusL" android:textSize="12sp" android:textStyle="bold"
       android:layout_width="wrap_content" android:layout_height="wrap_content"
        android:layout_weight="1"
-       android:textColor="@drawable/status_fg"
-       android:saveEnabled="true"/>
+       android:textColor="@drawable/status_fg" />
     <TextView android:id="@+id/statusR"
       android:textSize="12sp"
       android:textStyle="bold"
       android:layout_width="wrap_content" android:layout_height="wrap_content"
-      android:textColor="@drawable/status_fg"
-      android:saveEnabled="true"/>
+      android:textColor="@drawable/status_fg" />
   </LinearLayout>
     <TextView android:textSize="12sp"
       android:layout_width="fill_parent" android:layout_height="wrap_content"
       android:layout_weight="0"
       android:background="@drawable/error_bg" 
       android:textColor="@drawable/error_fg"
-      android:id="@+id/errors"
-      android:saveEnabled="true"/>
+      android:id="@+id/errors"/>
     <com.google.twisty.TwistyView android:id="@+id/status_v5"
       android:layout_width="fill_parent" android:layout_height="wrap_content"
       android:layout_weight="0"
-      android:background="@drawable/status_bg" android:typeface="monospace"
-      android:saveEnabled="true"/>
+      android:background="@drawable/status_bg" android:typeface="monospace"/>
     <com.google.twisty.TwistyView android:id="@+id/body"
       android:layout_width="fill_parent" android:layout_height="wrap_content"
       android:layout_weight="1"
       android:background="@drawable/body_bg"
-      android:scrollbars="vertical" android:fadingEdge="vertical"
-      android:fadingEdgeLength="6sp" android:typeface="monospace"
-      android:saveEnabled="true"/>
+      android:scrollbars="vertical" android:fadingEdge="vertical" android:fadingEdgeLength="6sp" android:typeface="monospace"/>
     <TextView android:textSize="12sp"
       android:layout_width="wrap_content" android:layout_height="wrap_content"
       android:layout_weight="0"
       android:text="@string/more_prompt"
       android:background="@drawable/more_bg" 
       android:textColor="@drawable/more_fg"
-      android:id="@+id/more"
-      android:saveEnabled="true"/>
+      android:id="@+id/more"/>
 </LinearLayout>
