Support content:// URI's in Unzipper
And use the same file extensions in Twisty itself and the Unzipper +
renamed all z-code related variable names in Twisty that are more
general now.

--- a/app/src/main/res/layout/choose_game_prompt.xml
+++ b/app/src/main/res/layout/choose_game_prompt.xml
@@ -8,18 +8,19 @@
     android:orientation="vertical"
     android:layout_width="fill_parent" 
     android:layout_height="fill_parent">
-    	
-    <TextView android:id="@+id/zgame_label" 
-              android:layout_width="fill_parent" 
-              android:layout_height="wrap_content" 
-              android:text="Games found on external media:"/>
+
+      <TextView
+          android:id="@+id/game_label"
+          android:layout_width="fill_parent"
+          android:layout_height="wrap_content"
+          android:text="Games found on external media:" />
     	
     <RadioGroup
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical"
         android:checkedButton="@+id/lunch"
-        android:id="@+id/zgame_radiomenu">
+        android:id="@+id/game_radiomenu">
     <!-- no radio buttons here, they're dynamically generated -->
     </RadioGroup>
     
